--- a/Theorycraft/Talent.html
+++ b/Theorycraft/Talent.html
@@ -19,7 +19,7 @@
         <!-- <script src="http://d3js.org/d3.v3.min.js"></script> -->
         <script src="d3.min.js?v=3.2.8"></script>
 
-        <script type="text/javascript"charset="utf-8">
+        <script type="text/javascript">
             d3.text("TalentData.csv", function(data) {
                 var parsedCSV = d3.csv.parseRows(data);
 
