--- a/Theorycraft/Tables/TalentData.html
+++ b/Theorycraft/Tables/TalentData.html
@@ -45,7 +45,7 @@
     <script type="text/javascript">
 
       CsvToHtmlTable.init({
-        csv_path: 'Data/Talent.csv',
+        csv_path: 'data/Talent.csv',
         element: 'table-container', 
         allow_download: true,
         csv_options: {separator: ',', delimiter: '"'},
