--- a/Theorycraft/classhistory/ninja.html
+++ b/Theorycraft/classhistory/ninja.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Nina History</title>
+    <title>Ninja History</title>
     <style type="text/css">
     </style>
 </head>
