--- a/Theorycraft/Fury.html
+++ b/Theorycraft/Fury.html
@@ -14,22 +14,22 @@
 			<p>"Fury", is an inherent skill property that increases the skill damage based on the user's current HP.</p>
 			<p>The skills with this property are as follows:
 			<li>Berserker: Lethal Strike, Vampiric Blow</li>
+			<li>Warrior: Rising Fury</li>
 			<li>Slayer: Fury Strike</li>
 			<p>For the Berserker skills (Lethal Strike, Vampiric Blow), the damage is determined:</p>
 			
 			<table  style=300px border="1">
 			<tr><th>%HP</th><th>% Damage Increase</th></tr>
-				<tr><td align="center">100%</td><td align="center">+0.0%</td></tr>
-				<tr><td align="center">99-90%</td><td align="center">+10.0%</td></tr>
-				<tr><td align="center">89-80%</td><td align="center">+20.0%</td></tr>
-				<tr><td align="center">79-70%</td><td align="center">+30.0%</td></tr>
-				<tr><td align="center">69-60%</td><td align="center">+40.0%</td></tr>
-				<tr><td align="center">59-50%</td><td align="center">+50.0%</td></tr>
-				<tr><td align="center">49-40%</td><td align="center">+60.0%</td></tr>
-				<tr><td align="center">39-30%</td><td align="center">+70.0%</td></tr>
-				<tr><td align="center">29-20%</td><td align="center">+80.0%</td></tr>
-				<tr><td align="center">19-10%</td><td align="center">+90.0%</td></tr>
-				<tr><td align="center">09-00%</td><td align="center">+100.0%</td></tr>
+				<tr><td align="center">100-90%</td><td align="center">+0.0%</td></tr>
+				<tr><td align="center">89.9-80%</td><td align="center">+10.0%</td></tr>
+				<tr><td align="center">79.9-70%</td><td align="center">+20.0%</td></tr>
+				<tr><td align="center">69.9-60%</td><td align="center">+30.0%</td></tr>
+				<tr><td align="center">59.9-50%</td><td align="center">+40.0%</td></tr>
+				<tr><td align="center">49.9-40%</td><td align="center">+50.0%</td></tr>
+				<tr><td align="center">39.9-30%</td><td align="center">+60.0%</td></tr>
+				<tr><td align="center">29.9-20%</td><td align="center">+70.0%</td></tr>
+				<tr><td align="center">19.9-10%</td><td align="center">+80.0%</td></tr>
+				<tr><td align="center">09.9-00%</td><td align="center">+100.0%</td></tr>
 			</table>
 		  	<p>For Slayer's Fury Strike, the damage is determined:</p>
 			<table  style=300px border="1">
