--- a/Theorycraft/Fury.html
+++ b/Theorycraft/Fury.html
@@ -16,8 +16,7 @@
 			<li>Berserker: Lethal Strike, Vampiric Blow</li>
 			<li>Warrior: Rising Fury</li>
 			<li>Slayer: Fury Strike</li>
-			<p>For the Berserker skills (Lethal Strike, Vampiric Blow), the damage is determined:</p>
-			
+			<p>For the Berserker skills (Lethal Strike, Vampiric Blow) and Warrior's Rising Fury, the damage is determined by:</p>
 			<table  style=300px border="1">
 			<tr><th>%HP</th><th>% Damage Increase</th></tr>
 				<tr><td align="center">100-90%</td><td align="center">+0.0%</td></tr>
@@ -31,7 +30,7 @@
 				<tr><td align="center">19.9-10%</td><td align="center">+80.0%</td></tr>
 				<tr><td align="center">09.9-00%</td><td align="center">+100.0%</td></tr>
 			</table>
-		  	<p>For Slayer's Fury Strike, the damage is determined:</p>
+		  	<p>For Slayer's Fury Strike, the damage is determined by:</p>
 			<table  style=300px border="1">
 				<tr><td align="center">100-90%</td><td align="center">-70.0%</td></tr>
 				<tr><td align="center">89.9-80%</td><td align="center">-40.0%</td></tr>
